--- a/Affichage.html
+++ b/Affichage.html
@@ -129,7 +129,9 @@
       <!-- Second dropdown for selecting the tableau -->
       <div class="dropdown-container">
         <label for="secondColumnListbox">Tableau :</label>
-        <select id="secondColumnListbox" multiple size="10"></select>
+        <select id="secondColumnListbox">
+          <option value="">Select an option</option>
+        </select>
       </div>
     </div>
 
@@ -185,10 +187,10 @@
         });
       }
 
-      // Function to populate the second listbox based on the selected first column value
+      // Function to populate the second dropdown based on the selected first column value
       function populateSecondColumnListbox(selectedValue) {
         const listbox = document.getElementById('secondColumnListbox');
-        listbox.innerHTML = '';  // Clear current listbox
+        listbox.innerHTML = '<option value="">Select an option</option>';  // Clear current listbox
 
         const secondColumnValues = records
           .filter(record => record.NomProjet === selectedValue)  // Filter based on selected first column value
@@ -301,11 +303,6 @@
           contextMenu.style.display = 'none';
       }
 
-      // Function to delete a record in Grist
-      function deleteRecordInGrist(recordId) {
-        grist.docApi.applyUserActions([['RemoveRecord', 'Fusion', recordId]]);
-      }
-
       // Fetch records from Grist
       grist.onRecords(function(receivedRecords) {
         console.log("Records received from Grist:", receivedRecords);
@@ -336,23 +333,13 @@
         }
       });
 
-      // Listen to changes in the second listbox and update the table accordingly
+      // Listen to changes in the second dropdown and update the table accordingly
       document.getElementById('secondColumnListbox').addEventListener('change', function() {
         selectedSecondValue = this.value;
         if (selectedFirstValue && selectedSecondValue) {
           populateTable();
         }
       });
-
-      // Function to update a record in Grist
-      function updateRecordInGrist(record) {
-        grist.docApi.applyUserActions([['UpdateRecord', 'Fusion', record.ID_Ligne, record]])
-        .then(() => {
-          console.log("Record updated in Grist:", record);
-        }).catch(error => {
-          console.error("Failed to update record in Grist:", error);
-      });
-      }
     </script>
   </body>
 </html>
