--- a/Affichage.html
+++ b/Affichage.html
@@ -155,6 +155,7 @@
     <!-- Form to add new rows -->
     <div class="add-form">
       <button id="addRowButton">Ajouter une ligne</button>
+      <button id="saveButton">Sauvegarder</button>
     </div>
 
     <script>
