--- a/Affichage.html
+++ b/Affichage.html
@@ -156,6 +156,7 @@
     <div class="add-form">
       <button id="addRowButton">Ajouter une ligne</button>
       <button id="saveButton">Sauvegarder</button>
+      <button id="insertButton">Insérer</button>
     </div>
 
     <script>
