--- a/Affichage.html
+++ b/Affichage.html
@@ -450,9 +450,7 @@
       // Écouteur d'événement pour le bouton de sauvegarde
       document.getElementById('saveButton').addEventListener('click', saveChanges);
 
-      // Écouteur d'événement pour le bouton de sauvegarde
-      document.getElementById('saveButton').addEventListener('click', saveChanges);
-
+      // Écouteur d'événement pour le bouton d'insersion
       document.getElementById('insertButton').addEventListener('click', () => {
         document.getElementById('fileInput').click();
       });
