--- a/Affichage.html
+++ b/Affichage.html
@@ -276,8 +276,8 @@
 
         const contextMenu = document.getElementById('contextMenu');
         contextMenu.style.display = 'block';
-        contextMenu.style.left = ${event.pageX}px;
-        contextMenu.style.top = ${event.pageY}px;
+        contextMenu.style.left = `${event.pageX}px`;
+        contextMenu.style.top = `${event.pageY}px`;
       }
 
       // Hide context menu if clicked elsewhere
