--- a/Affichage.html
+++ b/Affichage.html
@@ -131,7 +131,7 @@
         <label for="secondColumnListbox">Tableau :</label>
         <select id="secondColumnListbox">
           <option value="">Select an option</option>
-          <option value="addTable">Ajouter Tableau</option>
+          <option value="addTable">AJOUTER TABLEAU</option>
         </select>
       </div>
     </div>
