--- a/Affichage.html
+++ b/Affichage.html
@@ -122,15 +122,15 @@
       <div class="dropdown-container">
         <label for="firstColumnDropdown">Projet :</label>
         <select id="firstColumnDropdown">
-          <option value="">Select an option</option>
+          <option value="">Choix projet</option>
         </select>
       </div>
 
       <!-- Second dropdown for selecting the tableau -->
       <div class="dropdown-container">
-        <label for="secondColumnListbox">Tableau :</label>
+        <label for="secondColumnListbox">Etage :</label>
         <select id="secondColumnListbox">
-          <option value="">Select an option</option>
+          <option value="">Choix étage</option>
           <option value="addTable">AJOUTER TABLEAU</option>
         </select>
       </div>
