--- a/Affichage.html
+++ b/Affichage.html
@@ -127,7 +127,7 @@
           <option value="Ajouter Projet">Ajouter Projet</option>
           <option value="Insérer Projet">Insérer Projet</option>
         </select>
-        <input type="file" id="fileInputProject" style="display: none;" accept=".xls,.xlsx" />
+        <input type="file" id="fileInputProject" style="display: none;" accept=".xls,.xlsx,.xlsm" />
       </div>
 
       <!-- Second dropdown for selecting the tableau -->
