--- a/Affichage.html
+++ b/Affichage.html
@@ -876,7 +876,8 @@
                 const rowData = [];
                 for (let c = 0; c < 7; c++) { // On considère ici 7 colonnes
                   const cell = feuilleFichiers[XLSX.utils.encode_cell({ r, c })];
-                  rowData.push(cell?.v || null);
+                  const cellValue = cell?.v !== undefined && cell?.v !== null ? cell.v : null;
+                  rowData.push(cellValue === "" ? null : cellValue); // Exclure les chaînes vides
                 }
       
                 // Compléter la valeur manquante dans "Emetteur" avec la valeur précédente
