--- a/Affichage.html
+++ b/Affichage.html
@@ -993,7 +993,12 @@
           reader.onload = (event) => {
             try {
               const data = new Uint8Array(event.target.result);
-              const workbook = XLSX.read(data, { type: "array" });
+              const workbook = XLSX.read(data, {
+                type: "array",
+                cellText: false,
+                cellDates: true,
+                raw: true,
+              });
               resolve(workbook);
             } catch (error) {
               reject(error);
